--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,9 @@ nav {
   top: 60px;
   padding: 24px;
   transition: 0.3s ease;
+  background-color: var(--white);
+  left: 0;
+  width: 100%;
 
 }
 .mobile-menu a {
@@ -161,16 +164,24 @@ nav {
   color: var(--hospital-green) !important;
 }
 
-/*Aside cart*/
-.product-detail {
+/*Aside*/
+aside {
   width: 360px;
-  padding: 0 24px;
+  padding: 24px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
   transition: 0.3s ease;
   background-color: var(--white);
+  height: auto;
+  border-radius: 16px;
+  box-shadow: 3px 4px 10px rgba(0 0 0 / .2);
 }
+.text-details-aside{
+  display: flex;
+  flex-direction: column;
+}
+/*Shopping cart*/
 .title-container {
   display: flex;
 }
@@ -239,6 +250,7 @@ nav {
   height: 50px;
 }
 
+/*Product list*/
 .cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
@@ -255,48 +267,99 @@ nav {
   border-radius: 20px;
   object-fit: cover;
 }
-.product-info {
+.product-card .product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
 }
-.product-info figure {
+.product-card .product-info figure {
   margin: 0;
 }
-.product-info figure img {
+.product-card .product-info figure img {
   width: 35px;
   height: 35px;
 }
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
   font-weight: bold;
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
   font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
 }
-@media (max-width: 640px) {
-  .cards-container {
-    grid-template-columns: repeat(auto-fill, 140px);
-  }
-  .product-card {
-    width: 140px;
-  }
-  .product-card img {
-    width: 140px;
-    height: 140px;
-  }
+
+/*Product details*/
+.product-detail-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
 }
+.product-detail-close:hover {
+  cursor: pointer;
+}
+#producrDetail > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+#producrDetail .product-info {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 28px;
+}
+#producrDetail .product-info p:nth-child(1) {
+  justify-content: end;
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+#producrDetail .product-info p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+#producrDetail .product-info p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 /*Media Querys*/
 
 @media (max-width: 640px) {
-  .product-detail {
+  aside {
     width: 100%;
   }
   .menu-hamburguer {
@@ -310,6 +373,16 @@ nav {
   }
   .desktop-menu{
     display: none;
+  }
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, 140px);
+  }
+  .product-card {
+    width: 140px;
+  }
+  .product-card img {
+    width: 140px;
+    height: 140px;
   }
 }
 @media (min-width: 641px) {
